Simple test for git daemon